Beginning regression analysis

--- a/ecoreg_full_analysis_1.ipynb
+++ b/ecoreg_full_analysis_1.ipynb
@@ -2855,7 +2855,7 @@
    "source": [
     "The first 3 PCs explain a little over 80% of the variance, but the projection of the data into the space of the first 2 or 3 PCs does not suggest a clear separation. Perhaps there is a tendency for regulated sites to have higher scores on PC1 and PC3?\n",
     "\n",
-    "PC1 is strongly correlated with the number of taxa, the number of genera and the Shannon-Weiner index - in other words, PC1 seems to be largely representative of **diversity**. PC2, meanwhile, has large contributions (but in opposite directions) from **eveness** and **EPT taxa**, but I don't know enough about there metrics to be be able to interpret this. PC3 is overwhelmingly inversely correlated with the German saprobic index.\n",
+    "PC1 is strongly correlated with the number of taxa, the number of genera and the Shannon-Weiner index - in other words, PC1 seems to be largely representative of **diversity**. PC2, meanwhile, has large contributions (but in opposite directions) from **eveness** and **EPT taxa**, but I don't know enough about these metrics to be be able to interpret this. PC3 is overwhelmingly inversely correlated with the German saprobic index.\n",
     "\n",
     "##### MZB summary\n",
     "\n",
@@ -2867,7 +2867,7 @@
     " \n",
     " * Regulated sites in Norway may have a greater proportion of sessile species and active filter feeders, but fewer swimmers and divers. They may also have lower scores on the German saprobic index. <br><br>\n",
     " \n",
-    " * The choices for selected metrics for further analysis for MZB are:\n",
+    " * The selected metrics for further analysis for MZB are:\n",
     " \n",
     "| **PC** |  **Germany (all metrics)** | **Germany (overall metrics)** |   **Norway (all metrics)**   | **Norway (overall metrics)** |\n",
     "|:--:|:----------------------:|:-------------------------:|:------------------------:|:------------------------:|\n",
