--- a/ecoreg_full_analysis_2.ipynb
+++ b/ecoreg_full_analysis_2.ipynb
@@ -85,7 +85,7 @@
     "\n",
     "The frequentist t-test typically assumes the two groups are normally distributed, but I'd like to relax this requirement in my analysis here. This is because the previous notebook identified a number of outliers in the data, so I'd like to use a method that is more robust to outliers than a standard t-test. For this reason, in my Bayesian approach I'll assume the groups are distributed according to a Student-T distribution, which has heavier tails than a normal distribution and is therefore more tolerant of outliers. (Note that the choice of the Student-T distribution in this context has nothing to do with the frequentist t-test - it's just a distribution like any other).\n",
     "\n",
-    "The Student-T distribution is defined by three parameters: the mean, $\\mu$, the variance, $\\sigma^2$ and the degrees of freedom, $\\nu$. As $\\nu \\to \\infty$, the Student-T distribution becomes as normal distribution, whereas values of $\\nu$ close to zero give the distribution heavier tails. Because of these heavy tails, the Student-T distribution penalises outliers less severely than a Normal distribution, making the test a little more robust. This is illustrated below."
+    "The Student-T distribution is defined by three parameters: the mean, $\\mu$, the variance, $\\sigma^2$ and the degrees of freedom, $\\nu$. As $\\nu \\to \\infty$, the Student-T distribution becomes a normal distribution, whereas values of $\\nu$ close to zero give the distribution heavier tails. Because of these heavy tails, the Student-T distribution penalises outliers less severely than a normal distribution, making the test a little more robust. This is illustrated below."
    ]
   },
   {
@@ -1122,7 +1122,7 @@
     "\n",
     "### 5.4. Differences in HIs in Germany\n",
     "\n",
-    "The PCA didn't highlight any especially interesting patterns in the German HIs, but the tests above for PB and MZB suggest some interesting hypotheses flow stability at regulated versus unregulated stations. For these reasons I will test a range of hydrological metrics for both Germany and Norway."
+    "The PCA didn't highlight any especially interesting patterns in the German HIs, but the tests above for PB and MZB suggest some interesting hypotheses regarding flow stability at regulated versus unregulated stations. For these reasons I will test a range of hydrological metrics for both Germany and Norway."
    ]
   },
   {
@@ -1378,7 +1378,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is a very clear result - by far the strongest observed so far. There is essentially 100% confidence that regulated sites have a lower coefficient of variation than unregulated sites. The 95% credible interval ranges from -0.12 to -0.50, with a mean difference of -0.31. This implies that the flow regime at regulated sites in Germany is, on average, 28% less dispersed than at unregulated sites. This strongly supports the (well established) idea flow regulation reduces natural variability.\n",
+    "This is a very clear result - by far the strongest observed so far. There is essentially 100% confidence that regulated sites have a lower coefficient of variation than unregulated sites. The 95% credible interval ranges from -0.12 to -0.50, with a mean difference of -0.31. This implies that the flow regime at regulated sites in Germany is, on average, 31% less dispersed than at unregulated sites. This strongly supports the (well established) idea flow regulation reduces natural variability.\n",
     "\n",
     "#### 5.4.3. Number of reversals per year"
    ]
@@ -2044,7 +2044,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Regulated sites typically have have TN concentrations than unregulated sites (99% credibility). The 95% CI runs from 0.01 to 0.13 ug N/l, with a mean difference of 0.08 ug N/l. This is a reasonably large effect given typical concentrations are in the region o about 0.2 ug N/l.\n",
+    "Regulated sites typically have higher TN concentrations than unregulated sites (99% credibility). The 95% CI runs from 0.01 to 0.13 ug N/l, with a mean difference of 0.08 ug N/l. This is a reasonably large effect given typical concentrations are in the region of about 0.2 ug N/l.\n",
     "\n",
     "#### 5.6.2. TOC"
    ]
@@ -2117,7 +2117,7 @@
     " \n",
     "##### Norway\n",
     "\n",
-    " * There is an 85% probability that **regulated sites in Germany have higher overall PB abundance than unregulated rivers**. <br><br>\n",
+    " * There is an 85% probability that **regulated sites in Norway have higher overall PB abundance than unregulated rivers**. <br><br>\n",
     " \n",
     " * On average, **regulated sites have a PB abundance score that is 62 units higher than unregulated ones**. \n",
     " \n",
@@ -2145,7 +2145,7 @@
     "\n",
     "#### 5.7.3. HIs\n",
     "\n",
-    " * Despite very different hydrological regimes in Germany and Norway, our data suggest that regulation affects flows similarly in the two countries. Non of the results are very profound, but they do at least demonstrate that we have captured some hydrological gradients in our datasets, which gives some hope for identifying relationships in the next section.\n",
+    " * Despite very different hydrological regimes in Germany and Norway, our data suggest that regulation affects flows similarly in the two countries. None of the results are very profound, but they do at least demonstrate that we have captured some hydrological gradients in our datasets, which gives some hope for identifying relationships in the next section.\n",
     " \n",
     "##### Germany\n",
     "\n",
@@ -2169,7 +2169,7 @@
     "\n",
     "##### Norway\n",
     "\n",
-    " * **Regulated sites have higher TN and TOC concentrations than unregulated sites**. The mean difference is about 0.08 ug N/l for TN and 1.0 mg C/l for TOC. These differences are significant proportions of the typical TN and TOC concentrations found in Norwegian streams, but not that the background values in Norway for these variables are already very low. The differences are significant with > 97% credibility, but whether such small changes have ecological significance I cannot say.\n",
+    " * **Regulated sites have higher TN and TOC concentrations than unregulated sites**. The mean difference is about 0.08 ug N/l for TN and 1.0 mg C/l for TOC. These differences are significant proportions of the typical TN and TOC concentrations found in Norwegian streams, but note that the background values in Norway for these variables are already very low. The differences are significant with > 97% credibility, but whether such small changes have ecological significance I cannot say.\n",
     " \n",
     "### 5.8. Potentially interesting differences\n",
     "\n",
